examples/v0.9/errors/b.nova
import a

export fn world() {
    print("B")
}